fixed footer/body gap

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -1,5 +1,5 @@
 body {
   min-height:100vh;
   position: relative;
-  padding-bottom: 80px;
+  padding-bottom: 69px;
 }
